[package]
name = "esp32-nostd-study"
version = "0.1.0"
authors = ["murilo ijanc <mbsd@m0x.ru>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32" ] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.6.0", features = [
    "esp32",
    "wifi-default",
    "utils",
    "phy-enable-usb",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.20" }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
